# cv-matching

./: .gitignore  LICENSE  README.md  pyproject.toml
core/: embedding_models.py
core/models/: base_model.py  catboost_model.py  cosine_model.py  lightning_model.py  linear_regression.py
data/: test_cv.docx  versioning.py
notebooks/: process_data.ipynb  torch_model_inference.ipynb  train_models.ipynb
web/: __init__.py  app.py  process_data.py
